ParGo.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.8 from ParGo.y
-----------------------------------------------------------------------------

state 31 contains 1 shift/reduce conflicts.
state 32 contains 1 shift/reduce conflicts.
state 33 contains 2 shift/reduce conflicts.
state 112 contains 1 shift/reduce conflicts.
state 119 contains 2 shift/reduce conflicts.
state 130 contains 2 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pStart -> Start                             (0)
	Integer -> L_integ                                 (1)
	Double -> L_doubl                                  (2)
	Char -> L_charac                                   (3)
	String -> L_quoted                                 (4)
	Id -> L_Id                                         (5)
	Start -> 'package' Id ListDecl                     (6)
	Decl -> 'func' Id '(' ListParam ')' Type Block     (7)
	Decl -> 'func' Id '(' ListParam ')' 'void' Block   (8)
	Decl -> 'var' ListId Type                          (9)
	Decl -> 'var' ListId '=' ListExpR                  (10)
	Decl -> 'var' ListId Type '=' ListExpR             (11)
	ShortVarDecl -> ListId ':=' ListExpR               (12)
	Param -> ListId Type                               (13)
	Param -> Pass ListId Type                          (14)
	Pass -> 'val'                                      (15)
	Pass -> 'ref'                                      (16)
	Type -> 'int'                                      (17)
	Type -> 'bool'                                     (18)
	Type -> 'float'                                    (19)
	Type -> 'char'                                     (20)
	Type -> 'string'                                   (21)
	Type -> '[' Integer ']' Type                       (22)
	Type -> '*' Type                                   (23)
	Block -> '{' ListStmt '}'                          (24)
	Stmt -> Block                                      (25)
	Stmt -> StmtSmpl                                   (26)
	Stmt -> 'return' RExp                              (27)
	Stmt -> 'if' RExp Block                            (28)
	Stmt -> 'if' RExp Block 'else' Block               (29)
	Stmt -> 'if' StmtSmpl ';' RExp Block               (30)
	Stmt -> 'if' StmtSmpl ';' RExp Block 'else' Block   (31)
	Stmt -> 'for' RExp Block                           (32)
	Stmt -> Decl                                       (33)
	Stmt -> 'break'                                    (34)
	Stmt -> 'continue'                                 (35)
	Stmt -> 'write' '(' RExp ')'                       (36)
	Stmt -> 'read' '(' RExp ')'                        (37)
	StmtSmpl -> ShortVarDecl                           (38)
	StmtSmpl -> RExp                                   (39)
	StmtSmpl -> LExp '=' RExp                          (40)
	LExp -> Id                                         (41)
	LExp -> LExp '[' RExp ']'                          (42)
	LExp -> '*' RExp                                   (43)
	RExp -> RExp '+' RExp                              (44)
	RExp -> RExp '-' RExp                              (45)
	RExp -> RExp '*' RExp                              (46)
	RExp -> RExp '/' RExp                              (47)
	RExp -> RExp '%' RExp                              (48)
	RExp -> RExp '==' RExp                             (49)
	RExp -> RExp '!=' RExp                             (50)
	RExp -> RExp '<' RExp                              (51)
	RExp -> RExp '<=' RExp                             (52)
	RExp -> RExp '>' RExp                              (53)
	RExp -> RExp '>=' RExp                             (54)
	RExp -> RExp '&&' RExp                             (55)
	RExp -> RExp '||' RExp                             (56)
	RExp -> '!' RExp                                   (57)
	RExp -> '-' RExp                                   (58)
	RExp -> Value                                      (59)
	RExp -> LExp                                       (60)
	RExp -> Id '(' ')'                                 (61)
	RExp -> Id '(' ListExpR ')'                        (62)
	RExp -> '&' LExp                                   (63)
	RExp -> '(' RExp ')'                               (64)
	Value -> Integer                                   (65)
	Value -> Double                                    (66)
	Value -> Char                                      (67)
	Value -> String                                    (68)
	Value -> Boolean                                   (69)
	Boolean -> 'true'                                  (70)
	Boolean -> 'false'                                 (71)
	ListId -> Id                                       (72)
	ListId -> Id ',' ListId                            (73)
	ListExpR -> RExp                                   (74)
	ListExpR -> RExp ',' ListExpR                      (75)
	ListDecl ->                                        (76)
	ListDecl -> ListDecl Decl                          (77)
	ListParam ->                                       (78)
	ListParam -> Param                                 (79)
	ListParam -> Param ',' ListParam                   (80)
	ListStmt ->                                        (81)
	ListStmt -> ListStmt Stmt                          (82)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	':='           { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'['            { PT _ (TS _ 21) }
	']'            { PT _ (TS _ 22) }
	'bool'         { PT _ (TS _ 23) }
	'break'        { PT _ (TS _ 24) }
	'char'         { PT _ (TS _ 25) }
	'continue'     { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'false'        { PT _ (TS _ 28) }
	'float'        { PT _ (TS _ 29) }
	'for'          { PT _ (TS _ 30) }
	'func'         { PT _ (TS _ 31) }
	'if'           { PT _ (TS _ 32) }
	'int'          { PT _ (TS _ 33) }
	'package'      { PT _ (TS _ 34) }
	'read'         { PT _ (TS _ 35) }
	'ref'          { PT _ (TS _ 36) }
	'return'       { PT _ (TS _ 37) }
	'string'       { PT _ (TS _ 38) }
	'true'         { PT _ (TS _ 39) }
	'val'          { PT _ (TS _ 40) }
	'var'          { PT _ (TS _ 41) }
	'void'         { PT _ (TS _ 42) }
	'write'        { PT _ (TS _ 43) }
	'{'            { PT _ (TS _ 44) }
	'||'           { PT _ (TS _ 45) }
	'}'            { PT _ (TS _ 46) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pStart   rule  0
	Integer         rule  1
	Double          rule  2
	Char            rule  3
	String          rule  4
	Id              rule  5
	Start           rule  6
	Decl            rules 7, 8, 9, 10, 11
	ShortVarDecl    rule  12
	Param           rules 13, 14
	Pass            rules 15, 16
	Type            rules 17, 18, 19, 20, 21, 22, 23
	Block           rule  24
	Stmt            rules 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37
	StmtSmpl        rules 38, 39, 40
	LExp            rules 41, 42, 43
	RExp            rules 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64
	Value           rules 65, 66, 67, 68, 69
	Boolean         rules 70, 71
	ListId          rules 72, 73
	ListExpR        rules 74, 75
	ListDecl        rules 76, 77
	ListParam       rules 78, 79, 80
	ListStmt        rules 81, 82

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'package'      shift, and enter state 4

	Start          goto state 3

State 1


	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'!'            reduce using rule 1
	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'break'        reduce using rule 1
	'continue'     reduce using rule 1
	'false'        reduce using rule 1
	'for'          reduce using rule 1
	'func'         reduce using rule 1
	'if'           reduce using rule 1
	'read'         reduce using rule 1
	'return'       reduce using rule 1
	'true'         reduce using rule 1
	'var'          reduce using rule 1
	'write'        reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1
	L_integ        reduce using rule 1
	L_doubl        reduce using rule 1
	L_charac       reduce using rule 1
	L_quoted       reduce using rule 1
	L_Id           reduce using rule 1
	%eof           reduce using rule 1


State 3

	%start_pStart -> Start .                            (rule 0)

	%eof           accept


State 4

	Start -> 'package' . Id ListDecl                    (rule 6)

	L_Id           shift, and enter state 6

	Id             goto state 5

State 5

	Start -> 'package' Id . ListDecl                    (rule 6)

	'func'         reduce using rule 76
	'var'          reduce using rule 76
	%eof           reduce using rule 76

	ListDecl       goto state 7

State 6

	Id -> L_Id .                                        (rule 5)

	'!'            reduce using rule 5
	'!='           reduce using rule 5
	'%'            reduce using rule 5
	'&'            reduce using rule 5
	'&&'           reduce using rule 5
	'('            reduce using rule 5
	')'            reduce using rule 5
	'*'            reduce using rule 5
	'+'            reduce using rule 5
	','            reduce using rule 5
	'-'            reduce using rule 5
	'/'            reduce using rule 5
	':='           reduce using rule 5
	';'            reduce using rule 5
	'<'            reduce using rule 5
	'<='           reduce using rule 5
	'='            reduce using rule 5
	'=='           reduce using rule 5
	'>'            reduce using rule 5
	'>='           reduce using rule 5
	'['            reduce using rule 5
	']'            reduce using rule 5
	'bool'         reduce using rule 5
	'break'        reduce using rule 5
	'char'         reduce using rule 5
	'continue'     reduce using rule 5
	'false'        reduce using rule 5
	'float'        reduce using rule 5
	'for'          reduce using rule 5
	'func'         reduce using rule 5
	'if'           reduce using rule 5
	'int'          reduce using rule 5
	'read'         reduce using rule 5
	'return'       reduce using rule 5
	'string'       reduce using rule 5
	'true'         reduce using rule 5
	'var'          reduce using rule 5
	'write'        reduce using rule 5
	'{'            reduce using rule 5
	'||'           reduce using rule 5
	'}'            reduce using rule 5
	L_integ        reduce using rule 5
	L_doubl        reduce using rule 5
	L_charac       reduce using rule 5
	L_quoted       reduce using rule 5
	L_Id           reduce using rule 5
	%eof           reduce using rule 5


State 7

	Start -> 'package' Id ListDecl .                    (rule 6)
	ListDecl -> ListDecl . Decl                         (rule 77)

	'func'         shift, and enter state 9
	'var'          shift, and enter state 10
	%eof           reduce using rule 6

	Decl           goto state 8

State 8

	ListDecl -> ListDecl Decl .                         (rule 77)

	'func'         reduce using rule 77
	'var'          reduce using rule 77
	%eof           reduce using rule 77


State 9

	Decl -> 'func' . Id '(' ListParam ')' Type Block    (rule 7)
	Decl -> 'func' . Id '(' ListParam ')' 'void' Block    (rule 8)

	L_Id           shift, and enter state 6

	Id             goto state 13

State 10

	Decl -> 'var' . ListId Type                         (rule 9)
	Decl -> 'var' . ListId '=' ListExpR                 (rule 10)
	Decl -> 'var' . ListId Type '=' ListExpR            (rule 11)

	L_Id           shift, and enter state 6

	Id             goto state 11
	ListId         goto state 12

State 11

	ListId -> Id .                                      (rule 72)
	ListId -> Id . ',' ListId                           (rule 73)

	'*'            reduce using rule 72
	','            shift, and enter state 24
	':='           reduce using rule 72
	'='            reduce using rule 72
	'['            reduce using rule 72
	'bool'         reduce using rule 72
	'char'         reduce using rule 72
	'float'        reduce using rule 72
	'int'          reduce using rule 72
	'string'       reduce using rule 72


State 12

	Decl -> 'var' ListId . Type                         (rule 9)
	Decl -> 'var' ListId . '=' ListExpR                 (rule 10)
	Decl -> 'var' ListId . Type '=' ListExpR            (rule 11)

	'*'            shift, and enter state 16
	'='            shift, and enter state 17
	'['            shift, and enter state 18
	'bool'         shift, and enter state 19
	'char'         shift, and enter state 20
	'float'        shift, and enter state 21
	'int'          shift, and enter state 22
	'string'       shift, and enter state 23

	Type           goto state 15

State 13

	Decl -> 'func' Id . '(' ListParam ')' Type Block    (rule 7)
	Decl -> 'func' Id . '(' ListParam ')' 'void' Block    (rule 8)

	'('            shift, and enter state 14


State 14

	Decl -> 'func' Id '(' . ListParam ')' Type Block    (rule 7)
	Decl -> 'func' Id '(' . ListParam ')' 'void' Block    (rule 8)

	')'            reduce using rule 78
	'ref'          shift, and enter state 53
	'val'          shift, and enter state 54
	L_Id           shift, and enter state 6

	Id             goto state 11
	Param          goto state 49
	Pass           goto state 50
	ListId         goto state 51
	ListParam      goto state 52

State 15

	Decl -> 'var' ListId Type .                         (rule 9)
	Decl -> 'var' ListId Type . '=' ListExpR            (rule 11)

	'!'            reduce using rule 9
	'&'            reduce using rule 9
	'('            reduce using rule 9
	'*'            reduce using rule 9
	'-'            reduce using rule 9
	'='            shift, and enter state 48
	'break'        reduce using rule 9
	'continue'     reduce using rule 9
	'false'        reduce using rule 9
	'for'          reduce using rule 9
	'func'         reduce using rule 9
	'if'           reduce using rule 9
	'read'         reduce using rule 9
	'return'       reduce using rule 9
	'true'         reduce using rule 9
	'var'          reduce using rule 9
	'write'        reduce using rule 9
	'{'            reduce using rule 9
	'}'            reduce using rule 9
	L_integ        reduce using rule 9
	L_doubl        reduce using rule 9
	L_charac       reduce using rule 9
	L_quoted       reduce using rule 9
	L_Id           reduce using rule 9
	%eof           reduce using rule 9


State 16

	Type -> '*' . Type                                  (rule 23)

	'*'            shift, and enter state 16
	'['            shift, and enter state 18
	'bool'         shift, and enter state 19
	'char'         shift, and enter state 20
	'float'        shift, and enter state 21
	'int'          shift, and enter state 22
	'string'       shift, and enter state 23

	Type           goto state 47

State 17

	Decl -> 'var' ListId '=' . ListExpR                 (rule 10)

	'!'            shift, and enter state 37
	'&'            shift, and enter state 38
	'('            shift, and enter state 39
	'*'            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_integ        shift, and enter state 2
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 6

	Integer        goto state 27
	Double         goto state 28
	Char           goto state 29
	String         goto state 30
	Id             goto state 31
	LExp           goto state 32
	RExp           goto state 33
	Value          goto state 34
	Boolean        goto state 35
	ListExpR       goto state 36

State 18

	Type -> '[' . Integer ']' Type                      (rule 22)

	L_integ        shift, and enter state 2

	Integer        goto state 26

State 19

	Type -> 'bool' .                                    (rule 18)

	'!'            reduce using rule 18
	'&'            reduce using rule 18
	'('            reduce using rule 18
	')'            reduce using rule 18
	'*'            reduce using rule 18
	','            reduce using rule 18
	'-'            reduce using rule 18
	'='            reduce using rule 18
	'break'        reduce using rule 18
	'continue'     reduce using rule 18
	'false'        reduce using rule 18
	'for'          reduce using rule 18
	'func'         reduce using rule 18
	'if'           reduce using rule 18
	'read'         reduce using rule 18
	'return'       reduce using rule 18
	'true'         reduce using rule 18
	'var'          reduce using rule 18
	'write'        reduce using rule 18
	'{'            reduce using rule 18
	'}'            reduce using rule 18
	L_integ        reduce using rule 18
	L_doubl        reduce using rule 18
	L_charac       reduce using rule 18
	L_quoted       reduce using rule 18
	L_Id           reduce using rule 18
	%eof           reduce using rule 18


State 20

	Type -> 'char' .                                    (rule 20)

	'!'            reduce using rule 20
	'&'            reduce using rule 20
	'('            reduce using rule 20
	')'            reduce using rule 20
	'*'            reduce using rule 20
	','            reduce using rule 20
	'-'            reduce using rule 20
	'='            reduce using rule 20
	'break'        reduce using rule 20
	'continue'     reduce using rule 20
	'false'        reduce using rule 20
	'for'          reduce using rule 20
	'func'         reduce using rule 20
	'if'           reduce using rule 20
	'read'         reduce using rule 20
	'return'       reduce using rule 20
	'true'         reduce using rule 20
	'var'          reduce using rule 20
	'write'        reduce using rule 20
	'{'            reduce using rule 20
	'}'            reduce using rule 20
	L_integ        reduce using rule 20
	L_doubl        reduce using rule 20
	L_charac       reduce using rule 20
	L_quoted       reduce using rule 20
	L_Id           reduce using rule 20
	%eof           reduce using rule 20


State 21

	Type -> 'float' .                                   (rule 19)

	'!'            reduce using rule 19
	'&'            reduce using rule 19
	'('            reduce using rule 19
	')'            reduce using rule 19
	'*'            reduce using rule 19
	','            reduce using rule 19
	'-'            reduce using rule 19
	'='            reduce using rule 19
	'break'        reduce using rule 19
	'continue'     reduce using rule 19
	'false'        reduce using rule 19
	'for'          reduce using rule 19
	'func'         reduce using rule 19
	'if'           reduce using rule 19
	'read'         reduce using rule 19
	'return'       reduce using rule 19
	'true'         reduce using rule 19
	'var'          reduce using rule 19
	'write'        reduce using rule 19
	'{'            reduce using rule 19
	'}'            reduce using rule 19
	L_integ        reduce using rule 19
	L_doubl        reduce using rule 19
	L_charac       reduce using rule 19
	L_quoted       reduce using rule 19
	L_Id           reduce using rule 19
	%eof           reduce using rule 19


State 22

	Type -> 'int' .                                     (rule 17)

	'!'            reduce using rule 17
	'&'            reduce using rule 17
	'('            reduce using rule 17
	')'            reduce using rule 17
	'*'            reduce using rule 17
	','            reduce using rule 17
	'-'            reduce using rule 17
	'='            reduce using rule 17
	'break'        reduce using rule 17
	'continue'     reduce using rule 17
	'false'        reduce using rule 17
	'for'          reduce using rule 17
	'func'         reduce using rule 17
	'if'           reduce using rule 17
	'read'         reduce using rule 17
	'return'       reduce using rule 17
	'true'         reduce using rule 17
	'var'          reduce using rule 17
	'write'        reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	L_integ        reduce using rule 17
	L_doubl        reduce using rule 17
	L_charac       reduce using rule 17
	L_quoted       reduce using rule 17
	L_Id           reduce using rule 17
	%eof           reduce using rule 17


State 23

	Type -> 'string' .                                  (rule 21)

	'!'            reduce using rule 21
	'&'            reduce using rule 21
	'('            reduce using rule 21
	')'            reduce using rule 21
	'*'            reduce using rule 21
	','            reduce using rule 21
	'-'            reduce using rule 21
	'='            reduce using rule 21
	'break'        reduce using rule 21
	'continue'     reduce using rule 21
	'false'        reduce using rule 21
	'for'          reduce using rule 21
	'func'         reduce using rule 21
	'if'           reduce using rule 21
	'read'         reduce using rule 21
	'return'       reduce using rule 21
	'true'         reduce using rule 21
	'var'          reduce using rule 21
	'write'        reduce using rule 21
	'{'            reduce using rule 21
	'}'            reduce using rule 21
	L_integ        reduce using rule 21
	L_doubl        reduce using rule 21
	L_charac       reduce using rule 21
	L_quoted       reduce using rule 21
	L_Id           reduce using rule 21
	%eof           reduce using rule 21


State 24

	ListId -> Id ',' . ListId                           (rule 73)

	L_Id           shift, and enter state 6

	Id             goto state 11
	ListId         goto state 25

State 25

	ListId -> Id ',' ListId .                           (rule 73)

	'*'            reduce using rule 73
	':='           reduce using rule 73
	'='            reduce using rule 73
	'['            reduce using rule 73
	'bool'         reduce using rule 73
	'char'         reduce using rule 73
	'float'        reduce using rule 73
	'int'          reduce using rule 73
	'string'       reduce using rule 73


State 26

	Type -> '[' Integer . ']' Type                      (rule 22)

	']'            shift, and enter state 82


State 27

	Value -> Integer .                                  (rule 65)

	'!'            reduce using rule 65
	'!='           reduce using rule 65
	'%'            reduce using rule 65
	'&'            reduce using rule 65
	'&&'           reduce using rule 65
	'('            reduce using rule 65
	')'            reduce using rule 65
	'*'            reduce using rule 65
	'+'            reduce using rule 65
	','            reduce using rule 65
	'-'            reduce using rule 65
	'/'            reduce using rule 65
	';'            reduce using rule 65
	'<'            reduce using rule 65
	'<='           reduce using rule 65
	'='            reduce using rule 65
	'=='           reduce using rule 65
	'>'            reduce using rule 65
	'>='           reduce using rule 65
	'['            reduce using rule 65
	']'            reduce using rule 65
	'break'        reduce using rule 65
	'continue'     reduce using rule 65
	'false'        reduce using rule 65
	'for'          reduce using rule 65
	'func'         reduce using rule 65
	'if'           reduce using rule 65
	'read'         reduce using rule 65
	'return'       reduce using rule 65
	'true'         reduce using rule 65
	'var'          reduce using rule 65
	'write'        reduce using rule 65
	'{'            reduce using rule 65
	'||'           reduce using rule 65
	'}'            reduce using rule 65
	L_integ        reduce using rule 65
	L_doubl        reduce using rule 65
	L_charac       reduce using rule 65
	L_quoted       reduce using rule 65
	L_Id           reduce using rule 65
	%eof           reduce using rule 65


State 28

	Value -> Double .                                   (rule 66)

	'!'            reduce using rule 66
	'!='           reduce using rule 66
	'%'            reduce using rule 66
	'&'            reduce using rule 66
	'&&'           reduce using rule 66
	'('            reduce using rule 66
	')'            reduce using rule 66
	'*'            reduce using rule 66
	'+'            reduce using rule 66
	','            reduce using rule 66
	'-'            reduce using rule 66
	'/'            reduce using rule 66
	';'            reduce using rule 66
	'<'            reduce using rule 66
	'<='           reduce using rule 66
	'='            reduce using rule 66
	'=='           reduce using rule 66
	'>'            reduce using rule 66
	'>='           reduce using rule 66
	'['            reduce using rule 66
	']'            reduce using rule 66
	'break'        reduce using rule 66
	'continue'     reduce using rule 66
	'false'        reduce using rule 66
	'for'          reduce using rule 66
	'func'         reduce using rule 66
	'if'           reduce using rule 66
	'read'         reduce using rule 66
	'return'       reduce using rule 66
	'true'         reduce using rule 66
	'var'          reduce using rule 66
	'write'        reduce using rule 66
	'{'            reduce using rule 66
	'||'           reduce using rule 66
	'}'            reduce using rule 66
	L_integ        reduce using rule 66
	L_doubl        reduce using rule 66
	L_charac       reduce using rule 66
	L_quoted       reduce using rule 66
	L_Id           reduce using rule 66
	%eof           reduce using rule 66


State 29

	Value -> Char .                                     (rule 67)

	'!'            reduce using rule 67
	'!='           reduce using rule 67
	'%'            reduce using rule 67
	'&'            reduce using rule 67
	'&&'           reduce using rule 67
	'('            reduce using rule 67
	')'            reduce using rule 67
	'*'            reduce using rule 67
	'+'            reduce using rule 67
	','            reduce using rule 67
	'-'            reduce using rule 67
	'/'            reduce using rule 67
	';'            reduce using rule 67
	'<'            reduce using rule 67
	'<='           reduce using rule 67
	'='            reduce using rule 67
	'=='           reduce using rule 67
	'>'            reduce using rule 67
	'>='           reduce using rule 67
	'['            reduce using rule 67
	']'            reduce using rule 67
	'break'        reduce using rule 67
	'continue'     reduce using rule 67
	'false'        reduce using rule 67
	'for'          reduce using rule 67
	'func'         reduce using rule 67
	'if'           reduce using rule 67
	'read'         reduce using rule 67
	'return'       reduce using rule 67
	'true'         reduce using rule 67
	'var'          reduce using rule 67
	'write'        reduce using rule 67
	'{'            reduce using rule 67
	'||'           reduce using rule 67
	'}'            reduce using rule 67
	L_integ        reduce using rule 67
	L_doubl        reduce using rule 67
	L_charac       reduce using rule 67
	L_quoted       reduce using rule 67
	L_Id           reduce using rule 67
	%eof           reduce using rule 67


State 30

	Value -> String .                                   (rule 68)

	'!'            reduce using rule 68
	'!='           reduce using rule 68
	'%'            reduce using rule 68
	'&'            reduce using rule 68
	'&&'           reduce using rule 68
	'('            reduce using rule 68
	')'            reduce using rule 68
	'*'            reduce using rule 68
	'+'            reduce using rule 68
	','            reduce using rule 68
	'-'            reduce using rule 68
	'/'            reduce using rule 68
	';'            reduce using rule 68
	'<'            reduce using rule 68
	'<='           reduce using rule 68
	'='            reduce using rule 68
	'=='           reduce using rule 68
	'>'            reduce using rule 68
	'>='           reduce using rule 68
	'['            reduce using rule 68
	']'            reduce using rule 68
	'break'        reduce using rule 68
	'continue'     reduce using rule 68
	'false'        reduce using rule 68
	'for'          reduce using rule 68
	'func'         reduce using rule 68
	'if'           reduce using rule 68
	'read'         reduce using rule 68
	'return'       reduce using rule 68
	'true'         reduce using rule 68
	'var'          reduce using rule 68
	'write'        reduce using rule 68
	'{'            reduce using rule 68
	'||'           reduce using rule 68
	'}'            reduce using rule 68
	L_integ        reduce using rule 68
	L_doubl        reduce using rule 68
	L_charac       reduce using rule 68
	L_quoted       reduce using rule 68
	L_Id           reduce using rule 68
	%eof           reduce using rule 68


State 31

	LExp -> Id .                                        (rule 41)
	RExp -> Id . '(' ')'                                (rule 61)
	RExp -> Id . '(' ListExpR ')'                       (rule 62)

	'!'            reduce using rule 41
	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&'            reduce using rule 41
	'&&'           reduce using rule 41
	'('            shift, and enter state 81
			(reduce using rule 41)

	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'='            reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'['            reduce using rule 41
	']'            reduce using rule 41
	'break'        reduce using rule 41
	'continue'     reduce using rule 41
	'false'        reduce using rule 41
	'for'          reduce using rule 41
	'func'         reduce using rule 41
	'if'           reduce using rule 41
	'read'         reduce using rule 41
	'return'       reduce using rule 41
	'true'         reduce using rule 41
	'var'          reduce using rule 41
	'write'        reduce using rule 41
	'{'            reduce using rule 41
	'||'           reduce using rule 41
	'}'            reduce using rule 41
	L_integ        reduce using rule 41
	L_doubl        reduce using rule 41
	L_charac       reduce using rule 41
	L_quoted       reduce using rule 41
	L_Id           reduce using rule 41
	%eof           reduce using rule 41


State 32

	LExp -> LExp . '[' RExp ']'                         (rule 42)
	RExp -> LExp .                                      (rule 60)

	'!'            reduce using rule 60
	'!='           reduce using rule 60
	'%'            reduce using rule 60
	'&'            reduce using rule 60
	'&&'           reduce using rule 60
	'('            reduce using rule 60
	')'            reduce using rule 60
	'*'            reduce using rule 60
	'+'            reduce using rule 60
	','            reduce using rule 60
	'-'            reduce using rule 60
	'/'            reduce using rule 60
	';'            reduce using rule 60
	'<'            reduce using rule 60
	'<='           reduce using rule 60
	'='            reduce using rule 60
	'=='           reduce using rule 60
	'>'            reduce using rule 60
	'>='           reduce using rule 60
	'['            shift, and enter state 80
			(reduce using rule 60)

	']'            reduce using rule 60
	'break'        reduce using rule 60
	'continue'     reduce using rule 60
	'false'        reduce using rule 60
	'for'          reduce using rule 60
	'func'         reduce using rule 60
	'if'           reduce using rule 60
	'read'         reduce using rule 60
	'return'       reduce using rule 60
	'true'         reduce using rule 60
	'var'          reduce using rule 60
	'write'        reduce using rule 60
	'{'            reduce using rule 60
	'||'           reduce using rule 60
	'}'            reduce using rule 60
	L_integ        reduce using rule 60
	L_doubl        reduce using rule 60
	L_charac       reduce using rule 60
	L_quoted       reduce using rule 60
	L_Id           reduce using rule 60
	%eof           reduce using rule 60


State 33

	RExp -> RExp . '+' RExp                             (rule 44)
	RExp -> RExp . '-' RExp                             (rule 45)
	RExp -> RExp . '*' RExp                             (rule 46)
	RExp -> RExp . '/' RExp                             (rule 47)
	RExp -> RExp . '%' RExp                             (rule 48)
	RExp -> RExp . '==' RExp                            (rule 49)
	RExp -> RExp . '!=' RExp                            (rule 50)
	RExp -> RExp . '<' RExp                             (rule 51)
	RExp -> RExp . '<=' RExp                            (rule 52)
	RExp -> RExp . '>' RExp                             (rule 53)
	RExp -> RExp . '>=' RExp                            (rule 54)
	RExp -> RExp . '&&' RExp                            (rule 55)
	RExp -> RExp . '||' RExp                            (rule 56)
	ListExpR -> RExp .                                  (rule 74)
	ListExpR -> RExp . ',' ListExpR                     (rule 75)

	'!'            reduce using rule 74
	'!='           shift, and enter state 66
	'%'            shift, and enter state 67
	'&'            reduce using rule 74
	'&&'           shift, and enter state 68
	'('            reduce using rule 74
	')'            reduce using rule 74
	'*'            shift, and enter state 69
			(reduce using rule 74)

	'+'            shift, and enter state 70
	','            shift, and enter state 71
	'-'            shift, and enter state 72
			(reduce using rule 74)

	'/'            shift, and enter state 73
	';'            reduce using rule 74
	'<'            shift, and enter state 74
	'<='           shift, and enter state 75
	'=='           shift, and enter state 76
	'>'            shift, and enter state 77
	'>='           shift, and enter state 78
	'break'        reduce using rule 74
	'continue'     reduce using rule 74
	'false'        reduce using rule 74
	'for'          reduce using rule 74
	'func'         reduce using rule 74
	'if'           reduce using rule 74
	'read'         reduce using rule 74
	'return'       reduce using rule 74
	'true'         reduce using rule 74
	'var'          reduce using rule 74
	'write'        reduce using rule 74
	'{'            reduce using rule 74
	'||'           shift, and enter state 79
	'}'            reduce using rule 74
	L_integ        reduce using rule 74
	L_doubl        reduce using rule 74
	L_charac       reduce using rule 74
	L_quoted       reduce using rule 74
	L_Id           reduce using rule 74
	%eof           reduce using rule 74


State 34

	RExp -> Value .                                     (rule 59)

	'!'            reduce using rule 59
	'!='           reduce using rule 59
	'%'            reduce using rule 59
	'&'            reduce using rule 59
	'&&'           reduce using rule 59
	'('            reduce using rule 59
	')'            reduce using rule 59
	'*'            reduce using rule 59
	'+'            reduce using rule 59
	','            reduce using rule 59
	'-'            reduce using rule 59
	'/'            reduce using rule 59
	';'            reduce using rule 59
	'<'            reduce using rule 59
	'<='           reduce using rule 59
	'='            reduce using rule 59
	'=='           reduce using rule 59
	'>'            reduce using rule 59
	'>='           reduce using rule 59
	'['            reduce using rule 59
	']'            reduce using rule 59
	'break'        reduce using rule 59
	'continue'     reduce using rule 59
	'false'        reduce using rule 59
	'for'          reduce using rule 59
	'func'         reduce using rule 59
	'if'           reduce using rule 59
	'read'         reduce using rule 59
	'return'       reduce using rule 59
	'true'         reduce using rule 59
	'var'          reduce using rule 59
	'write'        reduce using rule 59
	'{'            reduce using rule 59
	'||'           reduce using rule 59
	'}'            reduce using rule 59
	L_integ        reduce using rule 59
	L_doubl        reduce using rule 59
	L_charac       reduce using rule 59
	L_quoted       reduce using rule 59
	L_Id           reduce using rule 59
	%eof           reduce using rule 59


State 35

	Value -> Boolean .                                  (rule 69)
